--- a/google-books-app/src/components/Book/book.css
+++ b/google-books-app/src/components/Book/book.css
@@ -8,23 +8,27 @@
     border-radius: 0px;   
 }
 .viewLink{
-    margin-left: 28px;
+    /* margin-left: 28px; */
     padding-top: 4px;
     padding-left: 24px;
     padding-right: 24px;
     padding-bottom: 4px;
     font-family: 'Fredoka One', cursive;
     background-color: #FF6A6A;
-    font-size: 1.18em;
+    font-size: .8em;
     letter-spacing: .1em;
     border-style: outset;
     border-width: 2px;
     border-color: #FF6A6A;
 }
 
+.noPadding{
+    padding: 0px;
+}
+
 .viewLink:hover{
     margin-top: 12px;
-    margin-bottom: 12px;
+    /* margin-bottom: 12px; */
     font-family: 'Fredoka One', cursive;
     background-color: #FF6A6A;
 }
@@ -73,14 +77,13 @@
     margin-top: 22px;
     margin-bottom: 14px;
     font-size: .96em;
-    max-height: 300px;
+    max-height: 160px;
     overflow: scroll;
 }
 
 .bookTitle{
-    margin-top: 18px;
-    margin-left: 6px;
-    margin-right: 6px;
+    padding-top: 12px;
+    text-align: left;
 }
 
 .bookAuthor{
@@ -93,3 +96,22 @@ ul{
     list-style-type: none;
     padding-top: 8px !important;
 }
+
+@media only screen and (min-width: 1000px) {
+    .viewLink{
+        font-size: 1.6em;
+        margin: 40px;
+    }
+  }
+
+  @media only screen and (min-width: 600px) {
+    .viewLink{
+        font-size: 1.35em;
+    }
+  }
+
+  @media only screen and (min-width: 1200px) {
+    .viewLink{
+        margin: 0px;
+    }
+  }
